decode .mp3 file and process it to brownized .wav file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,9 @@
 name = "oxidizer"
 version = "0.1.0"
 edition = "2024"
+author = "metarth"
+license = "MIT"
 
 [dependencies]
+symphonia = { version = "0.5", features = ["mp3", "isomp4"] }
+hound = "3.5"
