--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ license = "MIT"
 symphonia = { version = "0.5", features = ["mp3", "isomp4"] }
 hound = "3.5"
 rand = "0.9.2"
+clap = { version = "4.0", features = ["derive"] }
