--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,14 @@
 name = "oxidizer"
 version = "0.1.0"
 edition = "2024"
-author = "metarth"
+authors = ["metarth"]
+repository = "https://github.com/Sztakler/oxidizer"
+readme = "README.md"
+keywords = ["audio", "cli", "noise"]
 license = "MIT"
 
 [dependencies]
 symphonia = { version = "0.5", features = ["mp3", "isomp4"] }
 hound = "3.5"
 rand = "0.9.2"
+clap = { version = "4.0", features = ["derive"] }
