--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ symphonia = { version = "0.5", features = ["mp3", "isomp4"] }
 hound = "3.5"
 rand = "0.9.2"
 clap = { version = "4.0", features = ["derive"] }
+thiserror = "2.0.18"
